Cap Java version to 17